PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2008, PHP 5.2.6
- Fixed weired behavior in CGI parameter parsing. (Dmitry, Hannes Magnusson)

- Fixed bug #43620 (Workaround for a bug inside libcurl 7.16.2 that can result 
  in a crash). (Ilia)
- Fixed bug #43606 (define missing depencies of the exif extension).
  (crrodriguez at suse dot de)
- Fixed bug #43589 (a possible infinite loop in bz2_filter.c). (Greg)
- Fixed bug #43580 (removed bogus declaration of a non-existent php_is_url()  
  function). (Ilia)
- Fixed bug #43533 (escapeshellarg('') returns null). (Ilia)
- Fixed bug #43522 (stream_get_line() eats additional characters). (Felipe,
  Ilia)
- Fixed bug #43495 (array_merge_recursive() crashes with recursive arrays).
  (Ilia)
- Fixed bug #43493 (pdo_pgsql does not send username on connect when password
  is not available). (Ilia)
- Fixed bug #43482 (array_pad() does not warn on very small pad numbers).
  (Ilia)
- Fixed bug #43457 (Prepared statement with incorrect parms doesn't throw 
  exception with pdo_pgsql driver). (Ilia)
- Fixed bug #43386 (array_globals not reset to 0 properly on init). (Ilia)
- Fixed bug #43377 (PHP crashes with invalid argument for DateTimeZone). (Ilia)
- Fixed bug #43373 (pcntl_fork() should not raise E_ERROR on error). (Ilia)
- Fixed bug #43364 (recursive xincludes don't remove internal xml nodes 
  properly). (Rob, patch from ddb@bitxtender.de)
- Fixed bug #43092 (curl_copy_handle() crashes with > 32 chars long URL).
  (Jani)
- Fixed bug #43301 (mb_ereg*_replace() crashes when replacement string is
  invalid PHP expression and 'e' option is used). (Jani)
- Fixed bug #43295 (crash because of uninitialized SG(sapi_headers).mimetype). 
  (Dmitry)
- Fixed bug #43293 (Multiple segfaults in getopt()). (Hannes)
- Fixed bug #43279 (pg_send_query_params() converts all elements in 'params' 
  to strings). (Ilia)